--- a/LibraryManagementSystem/Views/Books/Index.cshtml
+++ b/LibraryManagementSystem/Views/Books/Index.cshtml
@@ -40,7 +40,7 @@
                 @Html.DisplayFor(modelItem => item.Publication)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.BookCategory.Id)
+                @Html.DisplayFor(modelItem => item.BookCategoryId)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
