publisher controller and view added

--- a/LibraryManagementSystem/Views/Shared/_Layout.cshtml
+++ b/LibraryManagementSystem/Views/Shared/_Layout.cshtml
@@ -37,6 +37,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="BookCategories" asp-action="Index">Book Categories</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Authors" asp-action="Index">Authors</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Publishers" asp-action="Index">Publishers</a>
+                        </li>
                     </ul>
                 </div>
             </div>
