--- a/LibraryManagementSystem/Views/Shared/_Layout.cshtml
+++ b/LibraryManagementSystem/Views/Shared/_Layout.cshtml
@@ -43,6 +43,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Publishers" asp-action="Index">Publishers</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Languages" asp-action="Index">Languages</a>
+                        </li>
                     </ul>
                 </div>
             </div>
