--- a/LibraryManagementSystem/Views/Shared/_Layout.cshtml
+++ b/LibraryManagementSystem/Views/Shared/_Layout.cshtml
@@ -35,6 +35,12 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Books" asp-action="Index">Book</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Members" asp-action="Index">Members</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Issues" asp-action="Index">Issues</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="BookCategories" asp-action="Index">Book Categories</a>
                         </li>
                         <li class="nav-item">
