--- a/LibraryManagementSystem/Views/BookCategories/Index.cshtml
+++ b/LibraryManagementSystem/Views/BookCategories/Index.cshtml
@@ -9,7 +9,7 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
+<table class="table" id="tbbookc" class="table table-striped table-hover table-bordered">
     <thead>
         <tr>
             <th>
@@ -33,3 +33,15 @@
 }
     </tbody>
 </table>
+@section Styles{
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.css">
+
+
+}
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
+    <script>
+        $('#tbbookc').dataTable();
+    </script>
+}
