--- a/LibraryManagementSystem/wwwroot/css/site.css
+++ b/LibraryManagementSystem/wwwroot/css/site.css
@@ -44,6 +44,7 @@ html {
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
+    color: gray;
 }
 .footer {
   position: absolute;
@@ -54,3 +55,14 @@ body {
   height: 60px;
   line-height: 60px; /* Vertically center the text there */
 }
+.topmenu {
+    background-color: #2c7805;
+}
+
+.navbar .brand, .navbar .nav > li > a {
+    color: white;
+}
+
+    .navbar .brand, .navbar .nav > li > a:hover {
+        color: goldenrod;
+    }
